--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,58 @@
     "\n",
     "PRESSURE_GRADIENT = np.array([-1.0, 0.0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "element_length = 1.0 / (N_POINTS - 1)\n",
+    "x_range = np.linspace(0, 1, N_POINTS)\n",
+    "y_range = np.linspace(0, 1, N_POINTS)\n",
+    "# make a meshgrid to represent the points in the domain\n",
+    "coordinates_x, coordinates_y = np.meshgrid(x_range, y_range)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Return central difference, but make it periodic using np.roll to % the result, operation is partial u on x\n",
+    "# This is the first step\n",
+    "def central_different_x_periodic(field):\n",
+    "    diff = (\n",
+    "        (\n",
+    "            np.roll(field, shift = 1, axis = 1)\n",
+    "            -\n",
+    "            np.roll(field, shift = -1, axis = 1)\n",
+    "        ) / (2 * element_length)\n",
+    "    )\n",
+    "    return diff"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
