implemented lapce_periodic

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -88,8 +88,29 @@
     "            np.roll(field, shift = -1, axis = 1)\n",
     "        ) / (2 * element_length)\n",
     "    )\n",
+    "    return diff\n",
+    "\n",
+    "def laplace_periodic(field):\n",
+    "    diff = (\n",
+    "        np.roll(field, shift = 1, axis = 1)\n",
+    "        +\n",
+    "        np.roll(field, shift = -1, axis = 1)\n",
+    "        +\n",
+    "        np.roll(field, shift = 1, axis = 0)\n",
+    "        +\n",
+    "        np.roll(field, shift = -1, axis = 0)\n",
+    "        -\n",
+    "        4 * field\n",
+    "    ) / (element_length ** 2)\n",
     "    return diff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
