Implemented core logic

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -110,7 +110,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Initial conditions\n",
+    "velocity_x_prev = np.ones((N_POINTS, N_POINTS))\n",
+    "# the bottom edge\n",
+    "velocity_x_prev[0, :] = 0\n",
+    "velocity_x_prev[-1, :] = 0\n",
+    "\n",
+    "# main loop\n",
+    "for i in tqdm(range(N_TIME_STEPS)):\n",
+    "    convection_x = velocity_x_prev * central_different_x_periodic(velocity_x_prev)\n",
+    "    diffusion_x = KINEMATIC_VISCOUSITY * laplace_periodic(velocity_x_prev)  \n",
+    "    \n",
+    "    velocity_x_next = (\n",
+    "        velocity_x_prev\n",
+    "        +\n",
+    "        TIME_STEP_LENGTH\n",
+    "        *(\n",
+    "            -PRESSURE_GRADIENT[0]\n",
+    "            +\n",
+    "            diffusion_x\n",
+    "            -\n",
+    "            convection_x\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    velocity_x_next[0, :] = 0.0\n",
+    "    velocity_x_next[-1, :]  = 0.0\n",
+    "\n",
+    "    # Advance in time\n",
+    "    velocity_x_prev = velocity_x_next\n",
+    "\n",
+    "    # Rendering\n",
+    "    plt.contourf(coordinates_x, coordinates_y, velocity_x_prev)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
